changed data bound to expand/collapse markers to nodes instead of edges. This fixed the issue with not having a marker at the root of the tree. Changed syntax of aggregate data dens cells to not exceed two characters. Aggregate cells are also colored blue now.

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -32,6 +32,14 @@ td {
   fill:none;
 }
 
+.cell .frame, .cell .dataDens.aggregated{
+  fill:#6994a9;
+}
+
+.cell .dataDens{
+ fill:#343434;
+}
+
 .giphy-embed{
   pointer-events:none;
   opacity:.4;
